tests/fixtures/errors/interp_generic_record.z
point: record {
    x: i64
}

show: function as { t: Any.generic } in {v: t} is {
    print "v=\{v} end"
}

main: function is {
    p: point x: 1
    show v: p
}
