tests/fixtures/errors/interp_generic_record.err
error[E0500]: zemitterc: unhandled interp part type point [line 6]
1 error found
